[package]
name = "vista-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
env_logger = "0.11.9"
futures = "0.3.32"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["stream"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
